@@ -30,7 +30,7 @@
 #include "libavutil/avutil.h"
 
 #define LIBAVCODEC_VERSION_MAJOR 52
-#define LIBAVCODEC_VERSION_MINOR 28
+#define LIBAVCODEC_VERSION_MINOR 29
 #define LIBAVCODEC_VERSION_MICRO  0
 
 #define LIBAVCODEC_VERSION_INT  AV_VERSION_INT(LIBAVCODEC_VERSION_MAJOR, \
@@ -195,6 +195,7 @@ enum CodecID {
     CODEC_ID_AURA2,
     CODEC_ID_V210X,
     CODEC_ID_TMV,
+    CODEC_ID_V210,
 
     /* various PCM "codecs" */
     CODEC_ID_PCM_S16LE= 0x10000,
